<resources>
    <string name="app_name">hakta_app</string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="start_btn">Start</string>
    <string name="slide1_title">Select the quest!</string>
    <string name="slide1_desc">A huge collection of different quests.
        Historical, children\'s, outdoors and many others…</string>
    <string name="slide2_title">Complete the task!</string>
    <string name="slide2_desc">Search for secret keys, location detection,
        step counting and much more…</string>
    <string name="slide3_title">Become a Top Key Finder</string>
    <string name="slide3_desc">User ratings, quest ratings, quest author ratings…</string>

    <string name="mail_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_fb">Sign in with Facebook</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sing_in_success">You are successfully logged in!</string>
    <string name="sign_out_success">You are successfully logged out!</string>

    <string name="nickname_hint">Nickname</string>
    <string name="code_hint">Code</string>
    <string name="phone_hint">Phone</string>
    <string name="repeat_password_hint">Repeat password</string>

    <string name="error_title">Error!</string>
    <string name="error_empty_field">Field cannot be empty!</string>
    <string name="error_incorrect_email">Incorrect email!</string>
    <string name="error_password_confirm">Passwords doesn\'t match!</string>
    <string name="error_incorrect_phone">Incorrect phone number!</string>
    <string name="ok">OK</string>

    <string name="activation_message">Activation code was sent to number:\n%1$s</string>
    <string name="activation_timer">%1$d sec</string>
    <string name="resend_code">Send code again</string>

    <string name="current_task_title">Current task</string>
    <string name="profile_title">Profile</string>
    <string name="best_quests_title">Best quests</string>

    <string name="details_btn_text">Details</string>
    <string name="no_tasks_title">There is no tasks yet</string>
    <string name="random_quest">Random quest</string>
    <string name="kazan">Kazan</string>

    <string name="menu_home">Home</string>
    <string name="menu_quests">Quests</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_ratings">Ratings</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_logout">Logout</string>
</resources>